--- a/Settings.plist
+++ b/Settings.plist
@@ -18,9 +18,10 @@
 	<integer>4</integer>
 	<key>timeInterval</key>
 	<real>0.1</real>
-	<key>textType</key>
-	<string>public.text</string>
-	<key>URLType</key>
-	<string>public.url</string>
+	<key>URITypes</key>
+	<array>
+		<string>public.url</string>
+		<string>public.text</string>
+	</array>
 </dict>
 </plist>
