attributed strings now working

--- a/settings/Settings.plist
+++ b/settings/Settings.plist
@@ -14,8 +14,16 @@
 	<real>0.1</real>
 	<key>opacity</key>
 	<real>0.3</real>
+	<key>pagePadding</key>
+	<integer>24</integer>
 	<key>rows</key>
 	<integer>4</integer>
+	<key>shadowOffset</key>
+	<integer>3</integer>
+	<key>shadowOpacity</key>
+	<real>0.5</real>
+	<key>shadowRadius</key>
+	<integer>5</integer>
 	<key>timeInterval</key>
 	<real>0.1</real>
 	<key>URITypes</key>
@@ -23,13 +31,11 @@
 		<string>public.url</string>
 		<string>public.text</string>
 	</array>
-	<key>shadowOpacity</key>
-	<real>0.5</real>
-	<key>shadowOffset</key>
-	<integer>3</integer>
-	<key>shadowRadius</key>
-	<integer>5</integer>
-	<key>pagePadding</key>
-	<integer>24</integer>
+	<key>pageRed</key>
+	<integer>1</integer>
+	<key>pageGreen</key>
+	<real>0.9</real>
+	<key>pageBlue</key>
+	<real>0.4</real>
 </dict>
 </plist>
