--- a/iOS/miscellaneous/Cloudboard-Info.plist
+++ b/iOS/miscellaneous/Cloudboard-Info.plist
@@ -8,6 +8,10 @@
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIconFile</key>
 	<string></string>
+	<key>CFBundleIconFiles</key>
+	<array>
+		<string>Icon72.png</string>
+	</array>
 	<key>CFBundleIdentifier</key>
 	<string>greatakiraempire.com.${PRODUCT_NAME:rfc1034identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
