memory management issues, minor changes'

--- a/OS X/miscellaneous/Cloudboard-Info.plist
+++ b/OS X/miscellaneous/Cloudboard-Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIconFile</key>
-	<string>Icon.png</string>
+	<string>iTunesArtwork.png</string>
 	<key>CFBundleIdentifier</key>
 	<string>greatakiraempire.com.${PRODUCT_NAME:rfc1034identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
