--- a/iOS/miscellaneous/Cloudboard-Info.plist
+++ b/iOS/miscellaneous/Cloudboard-Info.plist
@@ -18,7 +18,7 @@
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>PasteBoard</string>
+	<string>Pasteboard</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
