--- a/OS X/miscellaneous/Cloudboard-Info.plist
+++ b/OS X/miscellaneous/Cloudboard-Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleIconFile</key>
 	<string>iTunesArtwork.png</string>
 	<key>CFBundleIdentifier</key>
-	<string>greatakiraempire.com.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>com.livelycode.${PRODUCT_NAME:rfc1034identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
