--- a/ios/misc/Cloudboard-Info.plist
+++ b/ios/misc/Cloudboard-Info.plist
@@ -12,6 +12,7 @@
 	<array>
 		<string>Icon72.png</string>
 		<string>Icon114.png</string>
+		<string>Icon-72.png</string>
 	</array>
 	<key>CFBundleIdentifier</key>
 	<string>greatakiraempire.com.${PRODUCT_NAME:rfc1034identifier}</string>
