--- a/ios/misc/Cloudboard-Info.plist
+++ b/ios/misc/Cloudboard-Info.plist
@@ -15,7 +15,7 @@
 		<string>Icon-72.png</string>
 	</array>
 	<key>CFBundleIdentifier</key>
-	<string>greatakiraempire.com.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>com.livelycode.pasteboard.ipad</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
