--- a/iOS/misc/Cloudboard-Info.plist
+++ b/iOS/misc/Cloudboard-Info.plist
@@ -10,12 +10,12 @@
 	<string></string>
 	<key>CFBundleIconFiles</key>
 	<array>
-		<string>Icon72.png</string>
-		<string>Icon114.png</string>
 		<string>Icon-72.png</string>
+		<string>Icon@2x.png</string>
+		<string>Icon.png</string>
 	</array>
 	<key>CFBundleIdentifier</key>
-	<string>com.livelycode.pasteboard.ipad</string>
+	<string>com.livelycode.pasteboard-ios</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
@@ -27,7 +27,7 @@
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>1</string>
+	<string>1.0</string>
 	<key>LSApplicationCategoryType</key>
 	<string>public.app-category.productivity</string>
 	<key>UIPrerenderedIcon</key>
